[package]
name = "joi2008yo"
version = "0.1.0"
edition = "2018"

[package.metadata.cargo-compete.bin]
joi2008yo-a = { alias = "a", problem = "https://atcoder.jp/contests/joi2008yo/tasks/joi2008yo_a" }

[[bin]]
name = "joi2008yo-a"
path = "src/bin/a.rs"

[dependencies]
proconio = "0.4.3"

[dev-dependencies]
