[package]
name = "keyence2020"
version = "0.1.0"
edition = "2018"

[package.metadata.cargo-compete.bin]
keyence2020-b = { alias = "b", problem = "https://atcoder.jp/contests/keyence2020/tasks/keyence2020_b" }

[[bin]]
name = "keyence2020-b"
path = "src/bin/b.rs"

[dependencies]
proconio = "0.4.3"

[dev-dependencies]
